[tool.poetry]
authors = ["kyo <odinxp@gmail.com>"]
description = ""
license = "MIT"
name = "blog-post-ranking"
packages = [{include = "blog_post_ranking"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
