[tool.poetry]
authors = ["kyo <odinxp@gmail.com>"]
description = ""
license = "MIT"
name = "blog-post-ranking"
packages = [{include = "blog_post_ranking"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.10.0"
google-analytics-data = "^0.18.8"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "0.4.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
